sonarr/sonarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.teklogi.systems`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
